# klare

./: .gitignore  flake.nix  hie.yaml  klare.cabal  scripts.nix
example/: Main.hs
playground-exe/: Main.hs
playground/Playground/: Gear.hs  Main.hs
shaders/example/: frag.glsl  vert.glsl
src/Klare/: Events.hs  Font.hs
src/Klare/Data/: Buffer.hs  Coordinates.hs  Layout.hs  Texture.hs  Uniform.hs
src/Klare/Error/: GL.hs
src/Klare/Events/: Callbacks.hs  Type.hs
src/Klare/Example/: Geometry.hs  Main.hs
src/Klare/Image/: Texture.hs
src/Klare/Info/: Print.hs
src/Klare/Math/: Linear.hs
src/Shaders/: Load.hs
